--- a/feedstyle.css
+++ b/feedstyle.css
@@ -11,6 +11,7 @@
     --bg-main: #7F917C;
     --text-main: #DCDCD9;
     --accent: #FBEF81;
+    --bg-secondary: #41543E;
     font-size: 15px;
 }
 
@@ -70,21 +71,22 @@ body {
         }
 
         h3 {
-            align-items: center;
+            text-align: center;
             color: var(--text-main);
             font-size: 24px;
             line-height: 32px;
 
         }
-        .sidenav {
-          height: 100%;
-          position: fixed; 
-          z-index: 1; 
-          top: 0; 
-          left: 0;
-          background-color: var(--bg-main);
-          overflow-x: hidden; 
-          padding-top: 30px; }
+    
+            .sidenav {
+                height: 100%;
+                position: fixed; 
+                z-index: 1; 
+                top: 0; 
+                left: 0;
+                background-color: var(--bg-secondary);
+                overflow-x: hidden; 
+                padding-top: 100px; }
           .topnav {
             overflow: hidden;
             background-color: var(--bg-main);} 
