--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --bg-main: #7F917C;
     --text-main: #DCDCD9;
     --accent: #FBEF81;
+    --bg-secondary: #41543E;
     font-size: 15px;
 }
 
